@@ -1,4 +1,4 @@
-DIST stardict-dicts.exe 72478164 RMD160 6aaac63b08851874d0d1cc0f9586e3ea79e9f2f4 SHA1 ecdde44e7e77d17d71f6eafbb68870347d72c9b4 SHA256 5097cb44f0ce3914b1c13898c8623abd067361f72642b2dfb9b3fb8572549403
-EBUILD stardict-ruspack-0.2-r1.ebuild 595 RMD160 768c779748f1ba1c40eb9910e97b32002d0a7489 SHA1 1dfddbd788dd862c642c332631a00ada1f8a4b47 SHA256 83a45696c84808584de1731597fbb1575926d693f6e97eeaddba683774574961
-MISC ChangeLog 563 RMD160 45b251aef7d6ca42f32e518eceb20cfef074bf62 SHA1 25c003d68e185f100d0db7c050f80216f2626823 SHA256 b85c1b6180809fe3833b4ca3139b3eb809200a54b0b01f4d9800559102353151
+DIST stardict-ruspack-0.2.rar 72478164 RMD160 6aaac63b08851874d0d1cc0f9586e3ea79e9f2f4 SHA1 ecdde44e7e77d17d71f6eafbb68870347d72c9b4 SHA256 5097cb44f0ce3914b1c13898c8623abd067361f72642b2dfb9b3fb8572549403
+EBUILD stardict-ruspack-0.2-r1.ebuild 576 RMD160 5006527e5657cc32e4c430eef8a454a71ee556e0 SHA1 2a7c34c4ac285196081705159522a258d17ad3db SHA256 eab67ec51610a3505b189b03873c2b7954ffdb4a38e272b5d4cbc96def2e465c
+MISC ChangeLog 700 RMD160 60b569517a677642c0c77c8239be355f36eb61c2 SHA1 018d62305d74cdccc6a8160303a098e227ef0e5a SHA256 30f1eaff8d2aed9851a90baeccc272df0cf789b5ab77c97ce7a7ad475b51ae1a
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
