@@ -2,9 +2,11 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+EAPI="2"
+
 DESCRIPTION="Collection of dicts for stardict."
 HOMEPAGE="http://gnome.msiu.ru/stardict.php"
-SRC_URI="ftp://ftp.msiu.ru/education/FSF-Windows/stardict/dicts/stardict-dicts.exe"
+SRC_URI="ftp://ftp.msiu.ru/education/FSF-Windows/stardict/dicts/stardict-dicts.exe -> ${P}.rar"
 
 LICENSE="GPL-2"
 SLOT="0"
@@ -14,9 +16,9 @@ IUSE=""
 RDEPEND="|| ( app-text/stardict app-text/qstardict )
 	!app-dicts/stardict-freedict-eng-rus"
 
-DEPEND="app-arch/unrar"
+DEPEND="|| ( app-arch/unrar app-arch/rar )"
 
 src_install() {
-	dodir /usr/share/stardict/dic
-	unrar e "${DISTDIR}/stardict-dicts.exe" "${D}/usr/share/stardict/dic/"
+	insinto /usr/share/stardict/dic
+	doins *
 }
